# toys

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  annotated.html  annotated_dup.js  base.html  base_8h.html  base_8h_source.html  cache_8h.html  cache_8h_source.html  classFunnyMacroChecker-members.html  classFunnyMacroChecker.html  classFunnyMacroPluginAction-members.html  classFunnyMacroPluginAction.html  classes.html  classllama_1_1Exception-members.html  classllama_1_1Exception.html  classllama_1_1Exception.js  classllama_1_1IDebugPrint-members.html  classllama_1_1IDebugPrint.html  classllama_1_1IDebugPrint.js  classllama_1_1IException-members.html  classllama_1_1IException.html  classllama_1_1IException.js  classllama_1_1IHasCanonicalAddress-members.html  classllama_1_1IHasCanonicalAddress.html  classllama_1_1IRtti-members.html  classllama_1_1IRtti.html  classllama_1_1IRtti.js  classllama_1_1RttiContext-members.html  classllama_1_1RttiContext.html  classllama_1_1RttiContext.js  classllama_1_1bypass__null__check.html  classllama_1_1detail_1_1RttiModifier-members.html  classllama_1_1detail_1_1RttiModifier.html  classllama_1_1fso_1_1Cache-members.html  classllama_1_1fso_1_1Cache.html  (+207 more)
projects/llama/: CMakeLists.txt  modules.cmake
projects/llama/book/: CMakeLists.txt  sources.cmake
projects/llama/book/include/book/: book.h  workbook.h  workbook.proto
projects/llama/book/src/: book.cpp
projects/llama/cmake/: dummy.cpp  llama.cmake  llama_configure.cmake
projects/llama/docs/: DoxygenLayout.xml  llama.doxyfile  main.md
projects/llama/docs/md/: index.md
projects/llama/docs/md/general/: housekeep.md  org.md
projects/llama/entry/: CMakeLists.txt
projects/llama/entry/include/: entry.h
projects/llama/entry/src/: entry.cpp
projects/llama/foundation/: CMakeLists.txt  sources.cmake
projects/llama/foundation/src/: codec.cpp  codex.cpp  path.cpp  rtti.cpp
projects/llama/foundation/test/: codex.cpp  foundation_test.cpp  hash_test.cpp  inheritence.cpp  pointers.cpp  proto_test.cpp  rtti.cpp
projects/llama/glad/: CMakeLists.txt
projects/llama/multitasking/: CMakeLists.txt  sources.cmake
projects/llama/multitasking/src/: multitasking.cpp  time_slice_strategy.cpp
projects/llama/multitasking/test/: scheduler_test.cpp
projects/llama/opengl_loader/: sources.cmake
projects/llama/rtti_registry/: CMakeLists.txt  sources.cmake
projects/llama/scripts/: generate_file_list.py  housekeep-modules.schema.json  housekeep.py  housekeep.schema.json
projects/llama/src/: housekeep-modules.json  modules.cmake
projects/llama/src/base/: CMakeLists.txt  sources.cmake
projects/llama/src/code_checker/: CMakeLists.txt  sources.cmake
projects/llama/src/foundation/: sources.cmake
projects/llama/src/fso/: CMakeLists.txt  README.md  housekeep.json  sources.cmake
projects/llama/src/fso/src/: fso.cpp  (+3 more)
projects/llama/src/gc/: CMakeLists.txt  README.md  sources.cmake
projects/llama/src/glad/: CMakeLists.txt  housekeep.json  sources.cmake
projects/llama/src/multitasking/: CMakeLists.txt  sources.cmake
projects/llama/src/render/: sources.cmake
(+210 files in other folders)
